# agl-compositor

./: .gitreview  README.md  meson.build  meson_options.txt
clients/: grpc-async-cb.cpp  grpc-async-cb.h  grpc-async.cpp  grpc-async.h  grpc-sync.cpp  grpc-sync.h  grpc.cpp  grpc.h  log.h  main-grpc.cpp  main-grpc.h  meson.build  screenshooter.c  shell.cpp  shell.h
doc/: README.md
grpc-proxy/: agl_shell.proto  grpc-async-cb.cpp  grpc-async-cb.h  log.h  main-grpc.cpp  main-grpc.h  meson.build  shell.cpp  shell.h
protocol/: agl-shell-desktop.xml  agl-shell-policy.xml  agl-shell.xml  agl_shell.proto
shared/: option-parser.c  os-compatibility.c  os-compatibility.h  string-helpers.h
src/: compositor.c  desktop.c  input.c  ivi-compositor.h  layout.c  main.c  policy-default.c  policy-deny.c  policy-rba.c  policy.c  policy.h  rba_adapter.cpp  rba_adapter.h  screenshooter.c  shell.c  systemd-notify.h
tests/: agl-client-shell-test.c  agl-helper.c  agl-helper.h  agl-shell-test.c  meson.build  testsuite-util.c  weston-test-fixture-compositor.c  weston-test-fixture-compositor.h
